<resources>
    <string name="app_name">Instagram</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Log out</string>
    <string name="loading">Loading....</string>
    <string name="name">Name</string>
    <string name="add">Qo\'shish</string>
    <string name="your_name">Ismingiz</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="description">Description...</string>
    <string name="full_name">Full name</string>
</resources>