<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/email_lg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/password_lg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_lg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New to Instagram? Register"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>